add object buttons to jj

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,6 +11,10 @@ div, p, a{
     color: #000000;
 }
 
+ main{
+     padding-top: 104px;
+ }
+
 .text_large{
     font-size: 40px;
 }
@@ -27,6 +31,72 @@ div, p, a{
     width: 200px;
 }
 
+.map_btn{
+    /* color: purple;
+    background: transparent;
+    border: none !important;
+    font-size:0;  */
+}
+#jj_grey-chair-right{
+    position: absolute;
+    top: 70%;
+    right: 40%;
+    width: 20%;
+    height: 20%;
+}
+#jj_grey-chair-left{
+    position: absolute;
+    bottom: 12%;
+    left: 0;
+    width: 20%;
+    height: 17%;
+}
+
+#jj_end-table-left{
+    position: absolute;
+    left: 13%;
+    bottom: 30%;
+}
+
+#jj_end-table-middle{
+    position: absolute;
+    bottom: 19%;
+    left: 30%;
+    width: 7%;
+
+}
+
+#jj_media-table-right{
+    position: absolute;
+    bottom: 14%;
+    right: 2%;
+    height: 22%;
+    width: 16%;
+}
+
+#jj_couch-grey-right{
+    position: absolute;
+    right: 18%;
+    bottom: 22%;
+    height: 20%;
+    width: 16%;
+}
+
+#jj_lamp-right{
+    position: absolute;
+    top: 27%;
+    right: 30%;
+    height: 5%;
+}
+
+#jj_lamp-left{
+    position: absolute;
+    top: 13%;
+    left: 37%;
+    height: 10%;
+    width: 12%;
+}
+
 .home_img{
     height: 40em;
 }
@@ -35,6 +105,13 @@ div, p, a{
     width: 100%;
 }
 
- main{
-     padding-top: 104px;
- }
+#herotextparent{
+}
+
+#herotext{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99999999;
+}
